stuck at display inventory

--- a/src/app/components/fish/fish.component.html
+++ b/src/app/components/fish/fish.component.html
@@ -1,10 +1,10 @@
 <li class="menu-fish">
-    <img [src]="fish.image" [alt]="fish.image" />
+    <!-- <img [src]="fish.image" [alt]="fish.image" /> -->
     <h3 class="fish-name">
       <span class="price"></span>
     </h3>
-    <p>{{ fish.desc }}</p>
+    <!-- <p>{{ fish.desc }}</p> -->
     <button>
-      {{ isAvailable ? "Add To Order" : "Sold Out!" }}
+      <!-- {{ isAvailable ? "Add To Order" : "Sold Out!" }} -->
     </button>
 </li>
