--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,15 @@
-<p>
-  login works!
-</p>
+<nav class="login">
+  <h2>Inventory Login</h2>
+  <p>Sign in to manage your store's inventory.</p>
+  <button class="github" type="button" (click)="btnLogin_click(PROVIDER.GITHUB)">
+    Log In With GitHub
+  </button>
+  <button class="twitter" type="button" (click)="btnLogin_click(PROVIDER.TWITTER)">
+    Log In With Twitter
+  </button>
+  <button class="facebook" type="button" (click)="btnLogin_click(PROVIDER.FACEBOOK)">
+    Log In With Facebook
+  </button>
+  <button type="button" (click)="btnLogout_click()">Log Out!</button>
+  <p>Sorry you'are not the owner!</p>
+</nav>
