--- a/src/app/components/inventory/inventory.component.html
+++ b/src/app/components/inventory/inventory.component.html
@@ -1,10 +1,8 @@
 <div class="inventory">
   <div class="inventory-content">
-    <app-login [owner]="owner"></app-login>
-    <p>Sorry you'are not the owner!</p>
-    <ng-container>
-      <app-edit-fish-form></app-edit-fish-form>
-      <app-add-fish-form></app-add-fish-form>
-    </ng-container>
+    <app-login></app-login>
+    <app-edit-fish-form></app-edit-fish-form>
+    <app-add-fish-form></app-add-fish-form>
+    <!-- <p>Sorry you'are not the owner!</p> -->
   </div>
 </div>
